# circuit_experiments

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: circuit-tests.yml
benches/: merkle.rs
src/: chips.rs  circuits.rs
src/chips/: arth_chips.rs  merkle_chip.rs  poseidon_chip.rs
src/circuits/: arth_circuit.rs  arth_circuits.rs  merkle_circuit.rs  poseidon_circuit.rs
src/circuits/poseidon_circuit/: utils.rs
tests/: tests.rs
tests/utils/: fp3.rs  mod.rs  p128_pow5_t2.rs  p128_pow5_t3.rs  poseidon_hash.rs
