[package]
name = "circuit_samples"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs="0.2.0"
rstest = "0.16.0"
bitvec = "1.0.1"

[dev-dependencies]
light-poseidon = "0.0.3"
rand_core = "0.6.4"
halo2_gadgets="0.2.0"
rand = "0.8.5"
criterion = "0.3"

[[bench]]
name = "merkle"
harness = false